crates/plotnik-tests/tests/02-parser/recovery_validation/type_annotation_kebab.txt
Q = (a) @x :: My-Type
------------------ DIAGNOSTICS -------------------
error: type names must be PascalCase
 --> query.ptk:1:15
  |
1 | Q = (a) @x :: My-Type
  |               ^^^^^^^
  |
help: use `::MyType`
  |
1 - Q = (a) @x :: My-Type
1 + Q = (a) @x :: MyType
  |
